--- a/src/update2/org/cict/layout/curriculum/history.fxml
+++ b/src/update2/org/cict/layout/curriculum/history.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="927.0" style="-fx-background-color: #E85764;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="927.0" styleClass="metro-base-color" stylesheets="@../metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox minHeight="-Infinity" prefHeight="105.0" prefWidth="927.0" VBox.vgrow="ALWAYS">
          <children>
@@ -83,7 +83,7 @@
          </VBox.margin></VBox>
       <HBox alignment="CENTER_RIGHT" spacing="20.0">
          <children>
-            <Button fx:id="btn_view" mnemonicParsing="false" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="View Actual Data" textFill="WHITE">
+            <Button fx:id="btn_view" mnemonicParsing="false" style="-fx-border-color: #fff;" styleClass="metro-base-color" stylesheets="@../metro-ui.css" text="View Actual Data" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="31.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -95,7 +95,7 @@
                   <Font size="17.0" />
                </font>
             </Button>
-            <Button fx:id="btn_back" layoutX="841.0" layoutY="10.0" mnemonicParsing="false" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="Back" textFill="WHITE">
+            <Button fx:id="btn_back" layoutX="841.0" layoutY="10.0" mnemonicParsing="false" style="-fx-border-color: #fff;" styleClass="metro-base-color" stylesheets="@../metro-ui.css" text="Back" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="31.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -113,4 +113,7 @@
          </padding>
       </HBox>
    </children>
+   <padding>
+      <Insets left="10.0" right="10.0" top="10.0" />
+   </padding>
 </VBox>
