--- a/src/org/cict/accountmanager/faculty/main-row.fxml
+++ b/src/org/cict/accountmanager/faculty/main-row.fxml
@@ -2,29 +2,25 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" prefHeight="51.0" prefWidth="366.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" prefHeight="53.0" prefWidth="666.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <padding>
-      <Insets left="10.0" />
+      <Insets left="10.0" right="10.0" />
    </padding>
    <children>
+      <VBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
+         <children>
+            <Label accessibleText="name" maxWidth="1.7976931348623157E308" text="Joemar De la Cruz">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
       <Label accessibleText="id" text="2017-B">
-         <font>
-            <Font size="15.0" />
-         </font>
-         <graphic>
-            <ImageView fitHeight="27.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../src/images/Name_32px.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Label>
-      <Label accessibleText="name" maxWidth="1.7976931348623157E308" text="Joemar De la Cruz" HBox.hgrow="ALWAYS">
          <font>
             <Font size="15.0" />
          </font>
