--- a/src/update2/org/cict/layout/academicprogram/academic-home.fxml
+++ b/src/update2/org/cict/layout/academicprogram/academic-home.fxml
@@ -6,17 +6,36 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="646.0" prefWidth="980.0" style="-fx-background-color: #E85764;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="646.0" prefWidth="980.0" styleClass="metro-base-color" stylesheets="@../metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="22.0" layoutY="17.0" text="Academic Program and Subject" textFill="WHITE">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Label>
-      <Label layoutX="40.0" layoutY="70.0" prefHeight="50.0" prefWidth="445.0" text="Every Academic Program has one or more Curriculum. Each curriculum contains subject per semester." textFill="WHITE" wrapText="true">
+      <HBox alignment="CENTER_RIGHT" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Label maxWidth="1.7976931348623157E308" prefHeight="28.0" prefWidth="780.0" styleClass="metro-title-1" text="Academic Program and Subject" textFill="WHITE" HBox.hgrow="ALWAYS">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <JFXButton fx:id="btn_home" graphicTextGap="10.0" maxWidth="150.0" minWidth="150.0" prefHeight="42.0" prefWidth="150.0" style="-fx-border-color: #fff;" styleClass="metro-nav-button" text="Home" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../res/img/Dog%20House_52px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </JFXButton>
+         </children>
+         <padding>
+            <Insets left="20.0" right="30.0" top="10.0" />
+         </padding>
+      </HBox>
+      <Label layoutX="40.0" layoutY="70.0" prefHeight="50.0" prefWidth="880.0" styleClass="metro-subtitle-1" text="Every Academic Program has one or more Curriculum. Each curriculum contains subject per semester." textFill="WHITE" wrapText="true">
          <font>
             <Font size="15.0" />
          </font>
@@ -45,7 +64,7 @@
             </ImageView>
          </graphic>
       </Label>
-      <JFXButton fx:id="btn_new_acad" layoutX="109.0" layoutY="298.0" style="-fx-border-color: #fff;" text="Create New Academic Program" textFill="WHITE">
+      <JFXButton fx:id="btn_new_acad" layoutX="109.0" layoutY="298.0" prefHeight="48.0" prefWidth="290.0" style="-fx-border-color: #fff;" text="Create New Academic Program" textFill="WHITE">
          <font>
             <Font size="17.0" />
          </font>
@@ -74,7 +93,7 @@
             </ImageView>
          </graphic>
       </Label>
-      <JFXButton fx:id="btn_view_all_acad" layoutX="399.0" layoutY="298.0" style="-fx-border-color: #fff;" text="View All Academic Program" textFill="WHITE">
+      <JFXButton fx:id="btn_view_all_acad" layoutX="425.0" layoutY="298.0" prefHeight="48.0" prefWidth="266.0" style="-fx-border-color: #fff;" text="View All Academic Program" textFill="WHITE">
          <font>
             <Font size="17.0" />
          </font>
@@ -103,12 +122,12 @@
             </ImageView>
          </graphic>
       </Label>
-      <JFXButton fx:id="btn_new_subject" layoutX="106.0" layoutY="516.0" prefHeight="40.0" prefWidth="261.0" style="-fx-border-color: #fff;" text="Create New Subject" textFill="WHITE">
+      <JFXButton fx:id="btn_new_subject" layoutX="106.0" layoutY="516.0" prefHeight="48.0" prefWidth="296.0" style="-fx-border-color: #fff;" text="Create New Subject" textFill="WHITE">
          <font>
             <Font size="17.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btn_view_all_subj" layoutX="395.0" layoutY="516.0" prefHeight="40.0" prefWidth="240.0" style="-fx-border-color: #fff;" text="View All Subject" textFill="WHITE">
+      <JFXButton fx:id="btn_view_all_subj" layoutX="428.0" layoutY="516.0" prefHeight="48.0" prefWidth="266.0" style="-fx-border-color: #fff;" text="View All Subject" textFill="WHITE">
          <font>
             <Font size="17.0" />
          </font>
@@ -125,20 +144,5 @@
             </ImageView>
          </graphic>
       </Label>
-      <JFXButton fx:id="btn_home" graphicTextGap="10.0" layoutX="816.0" layoutY="15.0" maxWidth="150.0" minWidth="150.0" prefHeight="39.0" prefWidth="150.0" style="-fx-border-color: #fff;" text="Home" textFill="WHITE" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="15.0">
-         <graphic>
-            <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../res/img/Dog%20House_52px.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font size="15.0" />
-         </font>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </JFXButton>
    </children>
 </AnchorPane>
