--- a/src/update2/org/cict/layout/academicprogram/academic-program-home.fxml
+++ b/src/update2/org/cict/layout/academicprogram/academic-program-home.fxml
@@ -2,7 +2,6 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,18 +11,18 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="application_root" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: #E85764;" stylesheets="@academic-program-home.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="application_root" prefHeight="700.0" prefWidth="1200.0" styleClass="metro-base-color" stylesheets="@../metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="117.0" layoutY="44.0" prefHeight="67.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox layoutX="20.0" layoutY="9.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="15.0" layoutY="17.0" prefHeight="34.0" prefWidth="366.0" style="-fx-text-fill: #FFFFFF;" text="Academic Programs" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Label maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="366.0" style="-fx-text-fill: #FFFFFF;" styleClass="metro-title-1" text="Academic Programs" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="System Bold" size="31.0" />
                </font>
             </Label>
-            <HBox id="header-buttons" alignment="CENTER_RIGHT" layoutX="579.0" layoutY="4.0" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+            <HBox id="header-buttons" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" prefHeight="40.0" prefWidth="371.0">
                <children>
-                  <Label text="Sort:" textFill="#e6e9ed">
+                  <Label text="Sort:" textFill="#e6e9ed" visible="false">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -31,12 +30,19 @@
                         <Insets right="10.0" />
                      </HBox.margin>
                   </Label>
-                  <ComboBox fx:id="cmb_sort_" accessibleText="cmb_sort" opacity="0.86" prefHeight="35.0" prefWidth="180.0" style="-fx-border-color: #95A5A6; -fx-border-radius: 5; -fx-text-fill: #2980B9;" />
-                  <JFXButton fx:id="btn_home" graphicTextGap="10.0" maxWidth="150.0" minWidth="150.0" prefHeight="39.0" prefWidth="150.0" style="-fx-border-color: #fff;" text="Home" textFill="WHITE">
+                  <JFXButton fx:id="btn_home1" graphicTextGap="10.0" layoutX="261.0" layoutY="20.0" maxWidth="150.0" minWidth="150.0" prefHeight="48.0" prefWidth="150.0" style="-fx-border-color: #fff;" text="Show Not Saved" textFill="WHITE">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </JFXButton>
+                  <JFXButton fx:id="btn_home" graphicTextGap="10.0" maxWidth="150.0" minWidth="150.0" prefHeight="39.0" prefWidth="150.0" style="-fx-border-color: #fff;" text="Back" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../res/img/Dog%20House_52px.png" />
+                              <Image url="@../subjects/img/Back%20Arrow_32px.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -53,7 +59,10 @@
                </children>
             </HBox>
          </children>
-      </AnchorPane>
+         <padding>
+            <Insets left="20.0" right="30.0" top="10.0" />
+         </padding>
+      </HBox>
       <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" AnchorPane.bottomAnchor="69.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="75.0">
          <children>
             <VBox fx:id="vbox_table_holder" prefHeight="700.0" prefWidth="1303.0" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" />
@@ -127,7 +136,7 @@
             </VBox>
          </children>
       </AnchorPane>
-      <JFXButton fx:id="btnNewProgram" layoutX="1058.0" layoutY="661.0" prefHeight="51.0" prefWidth="238.0" style="-fx-border-color: #fff;" text="New Program" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+      <JFXButton fx:id="btnNewProgram" layoutX="1058.0" layoutY="661.0" prefHeight="51.0" prefWidth="238.0" style="-fx-border-color: #fff;" text="New Program" textFill="WHITE" visible="false" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
          <font>
             <Font size="20.0" />
          </font>
@@ -139,7 +148,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton fx:id="btn_view_subjects" layoutX="690.0" layoutY="635.0" prefHeight="51.0" prefWidth="238.0" style="-fx-border-color: #fff;" text="View Subjects" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="280.0">
+      <JFXButton fx:id="btn_view_subjects" layoutX="690.0" layoutY="635.0" prefHeight="51.0" prefWidth="238.0" style="-fx-border-color: #fff;" text="View Subjects" textFill="WHITE" visible="false" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="280.0">
          <font>
             <Font size="20.0" />
          </font>
