--- a/src/update2/org/cict/layout/academicprogram/program-row-extension.fxml
+++ b/src/update2/org/cict/layout/academicprogram/program-row-extension.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="-Infinity" prefHeight="600.0" prefWidth="1178.0" style="-fx-background-color: #E85764;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="-Infinity" prefHeight="600.0" prefWidth="1178.0" styleClass="metro-base-color" stylesheets="@../metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox spacing="20.0">
          <children>
@@ -191,12 +191,12 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </HBox>
-      <HBox alignment="CENTER_LEFT" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
          <children>
-            <VBox prefHeight="60.0" prefWidth="736.0" HBox.hgrow="ALWAYS">
+            <VBox prefHeight="60.0" prefWidth="791.0" HBox.hgrow="ALWAYS">
                <children>
                   <Label text="Curriculums" textFill="WHITE">
                      <font>
@@ -215,29 +215,39 @@
                   </Label>
                </children>
             </VBox>
-            <ComboBox accessibleText="cmb_sort" opacity="0.86" prefHeight="35.0" prefWidth="180.0" style="-fx-border-color: #95A5A6; -fx-border-radius: 5; -fx-text-fill: #2980B9;" />
-            <VBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="229.0">
+            <ComboBox accessibleText="cmb_sort" opacity="0.86" prefHeight="35.0" prefWidth="180.0" style="-fx-border-color: #95A5A6; -fx-border-radius: 5; -fx-text-fill: #2980B9;" visible="false" />
+            <HBox>
                <children>
-                  <JFXButton accessibleText="btn_newCurriculum" maxHeight="1.7976931348623157E308" style="-fx-border-color: #fff;" text="New Curriculum" textFill="WHITE">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/add.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </JFXButton>
+                  <VBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="309.0">
+                     <children>
+                        <JFXButton accessibleText="btn_show" maxHeight="1.7976931348623157E308" prefHeight="44.0" prefWidth="183.0" style="-fx-border-color: #fff;" text="Show Unimplemented" textFill="WHITE">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="60.0" prefWidth="279.0">
+                     <children>
+                        <JFXButton accessibleText="btn_newCurriculum" maxHeight="1.7976931348623157E308" style="-fx-border-color: #fff;" text="New Curriculum" textFill="WHITE">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/add.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </JFXButton>
+                     </children>
+                     <padding>
+                        <Insets right="10.0" />
+                     </padding>
+                  </VBox>
                </children>
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </VBox>
+            </HBox>
          </children>
       </HBox>
       <VBox accessibleText="vbox_curriculum_table_holder" minWidth="70.0" prefHeight="200.0" prefWidth="100.0" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" VBox.vgrow="ALWAYS">
