--- a/src/update2/org/cict/layout/curriculum/curriculum-info.fxml
+++ b/src/update2/org/cict/layout/curriculum/curriculum-info.fxml
@@ -16,13 +16,13 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.CheckComboBox?>
 
-<VBox fx:id="application_root" prefHeight="656.0" prefWidth="1322.0" style="-fx-background-color: #E85764;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" prefHeight="656.0" prefWidth="1322.0" styleClass="metro-base-color" stylesheets="@../metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="456.0">
          <children>
-            <HBox spacing="10.0">
+            <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Label maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="689.0" text="Curriculum Information" textFill="WHITE" HBox.hgrow="ALWAYS">
+                  <Label maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="689.0" styleClass="metro-title-1" text="Curriculum Information" textFill="WHITE" HBox.hgrow="ALWAYS">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
@@ -34,7 +34,7 @@
                         </ImageView>
                      </graphic>
                   </Label>
-                  <Button fx:id="btn_implement" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="Implement" textFill="WHITE">
+                  <Button fx:id="btn_implement" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" style="-fx-background-color: #414852; -fx-border-color: #fff;" text="Implement" textFill="WHITE">
                      <font>
                         <Font size="17.0" />
                      </font>
@@ -46,7 +46,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="btn_history" layoutX="709.0" layoutY="10.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="History" textFill="WHITE">
+                  <Button fx:id="btn_history" layoutX="709.0" layoutY="10.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" style="-fx-background-color: #414852; -fx-border-color: #fff;" text="History" textFill="WHITE">
                      <font>
                         <Font size="17.0" />
                      </font>
@@ -58,7 +58,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="btn_back" layoutX="1142.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="116.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="Back" textFill="WHITE">
+                  <Button fx:id="btn_back" layoutX="1142.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="116.0" style="-fx-background-color: #414852; -fx-border-color: #fff;" text="Back" textFill="WHITE">
                      <font>
                         <Font size="17.0" />
                      </font>
@@ -71,16 +71,13 @@
                      </graphic>
                   </Button>
                </children>
-               <padding>
-                  <Insets right="20.0" />
-               </padding>
             </HBox>
          </children>
          <VBox.margin>
             <Insets />
          </VBox.margin>
          <padding>
-            <Insets left="10.0" />
+            <Insets left="20.0" right="30.0" top="10.0" />
          </padding>
       </VBox>
       <HBox prefHeight="588.0" prefWidth="1100.0" VBox.vgrow="ALWAYS">
@@ -230,7 +227,7 @@
                   </HBox>
                   <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="50.0" prefHeight="0.0" prefWidth="387.0" spacing="10.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <Button fx:id="btn_edit" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="38.0" prefWidth="393.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="Save Changes" textFill="WHITE" HBox.hgrow="ALWAYS">
+                        <Button fx:id="btn_edit" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="38.0" prefWidth="393.0" style="-fx-background-color: #414852; -fx-border-color: #fff;" text="Save Changes" textFill="WHITE" HBox.hgrow="ALWAYS">
                            <font>
                               <Font size="17.0" />
                            </font>
@@ -357,7 +354,7 @@
                   <Insets top="10.0" />
                </HBox.margin>
             </VBox>
-            <VBox prefHeight="585.0" prefWidth="775.0" style="-fx-border-color: #fff; -fx-border-width: 3;" HBox.hgrow="ALWAYS">
+            <VBox prefHeight="585.0" prefWidth="775.0" HBox.hgrow="ALWAYS">
                <children>
                   <Label prefHeight="62.0" prefWidth="298.0" text="Year and Semester" textFill="WHITE">
                      <graphic>
