--- a/src/update2/org/cict/layout/curriculum/subject-extension.fxml
+++ b/src/update2/org/cict/layout/curriculum/subject-extension.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -7,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="400.0" prefWidth="590.0" style="-fx-background-color: #E85764;" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="400.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox accessibleText="vbox_subjects" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="400.0" prefWidth="842.0" VBox.vgrow="ALWAYS">
          <VBox.margin>
@@ -29,4 +31,12 @@
          </children>
       </VBox>
    </children>
+   <stylesheets>
+      <URL value="@../metro-ui-table.css" />
+      <URL value="@../metro-ui.css" />
+   </stylesheets>
+   <styleClass>
+      <String fx:value="metro-table" />
+      <String fx:value="metro-base-color" />
+   </styleClass>
 </VBox>
