--- a/src/update2/org/cict/layout/subjects/search-subject.fxml
+++ b/src/update2/org/cict/layout/subjects/search-subject.fxml
@@ -14,39 +14,43 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="anchor_main" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #E85764;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="anchor_main" prefHeight="600.0" prefWidth="1000.0" styleClass="metro-base-color" stylesheets="@../metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="107.0" layoutY="34.0" prefHeight="67.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="15.0" layoutY="17.0" prefHeight="34.0" prefWidth="366.0" style="-fx-text-fill: #FFFFFF;" text="Find Subject">
-               <font>
-                  <Font name="System Bold" size="30.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="41.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@img/Search_64px.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Label>
-            <Label fx:id="lbl_title" layoutX="258.0" layoutY="34.0" textFill="WHITE">
+            <HBox alignment="CENTER" layoutX="20.0" layoutY="9.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="10.0">
+               <children>
+                  <Label maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="366.0" style="-fx-text-fill: #FFFFFF;" styleClass="metro-title-1" text="Find Subject" HBox.hgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="30.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="41.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/Search_64px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Label>
+                  <JFXButton fx:id="btn_done" alignment="CENTER" graphicTextGap="10.0" prefHeight="19.0" prefWidth="128.0" style="-fx-text-fill: #FFFFFF; -fx-border-color: #fff;" text="Done">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/Checkmark_32px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+               </children>
+            </HBox>
+            <Label fx:id="lbl_title" layoutX="296.0" layoutY="34.0" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <JFXButton fx:id="btn_done" alignment="CENTER" graphicTextGap="10.0" layoutX="848.0" layoutY="14.0" prefHeight="19.0" prefWidth="128.0" style="-fx-text-fill: #FFFFFF; -fx-border-color: #fff;" text="Done" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="14.0">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@img/Checkmark_32px.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
          </children>
       </AnchorPane>
       <HBox alignment="CENTER_LEFT" layoutY="110.0" prefHeight="67.0" prefWidth="980.0" spacing="10.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="67.0">
