--- a/src/update2/org/cict/layout/subjects/subject-bank.fxml
+++ b/src/update2/org/cict/layout/subjects/subject-bank.fxml
@@ -16,16 +16,16 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="anchor_main" prefHeight="621.0" prefWidth="1147.0" style="-fx-background-color: #E85764;" styleClass="metro-base-color" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="anchor_main" prefHeight="621.0" prefWidth="1147.0" styleClass="metro-base-color" stylesheets="@../metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="107.0" layoutY="34.0" prefHeight="67.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="15.0" layoutY="17.0" prefHeight="34.0" prefWidth="366.0" style="-fx-text-fill: #FFFFFF;" text="Subject Repository" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Label layoutX="15.0" layoutY="17.0" prefHeight="34.0" prefWidth="366.0" style="-fx-text-fill: #FFFFFF;" styleClass="metro-title-1" text="Subject Repository" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font name="System Bold" size="31.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER_RIGHT" layoutX="579.0" layoutY="4.0" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+            <HBox alignment="CENTER_RIGHT" layoutX="579.0" layoutY="4.0" maxWidth="1.7976931348623157E308" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="10.0">
                <children>
                   <JFXButton fx:id="btn_home" graphicTextGap="10.0" maxWidth="150.0" minWidth="150.0" prefHeight="41.0" prefWidth="150.0" style="-fx-border-color: #fff;" styleClass="metro-nav-button" text="Back" textFill="WHITE">
                      <graphic>
@@ -46,7 +46,7 @@
             </HBox>
          </children>
       </AnchorPane>
-      <VBox fx:id="vbox_subjects" layoutX="40.0" layoutY="94.0" prefHeight="517.0" prefWidth="1180.0" style="-fx-border-color: #FFFFFF;" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" AnchorPane.bottomAnchor="71.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="80.0" />
+      <VBox fx:id="vbox_subjects" layoutX="40.0" layoutY="94.0" prefHeight="517.0" prefWidth="1180.0" style="-fx-border-color: #FFFFFF;" styleClass="metro-table" stylesheets="@../metro-ui-table.css" AnchorPane.bottomAnchor="71.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="80.0" />
       <HBox fx:id="hbox_searching" alignment="CENTER" layoutX="11.0" layoutY="250.0" prefHeight="150.0" prefWidth="1165.0" visible="false" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="9.0">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
@@ -77,7 +77,7 @@
             </VBox>
          </children>
       </HBox>
-      <JFXButton fx:id="btn_new_subject" layoutX="984.0" layoutY="564.0" prefHeight="44.0" prefWidth="200.0" style="-fx-border-color: #fff;" text="New Subject" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="14.0">
+      <JFXButton fx:id="btn_new_subject" layoutX="984.0" layoutY="564.0" prefHeight="44.0" prefWidth="200.0" style="-fx-border-color: #fff;" text="New Subject" textFill="WHITE" visible="false" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="14.0">
          <font>
             <Font size="18.0" />
          </font>
@@ -119,7 +119,7 @@
             </VBox>
          </children>
       </HBox>
-      <AnchorPane fx:id="anchor_new_subject" minWidth="100.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #E85764;" visible="false" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
+      <AnchorPane fx:id="anchor_new_subject" minWidth="100.0" prefHeight="200.0" prefWidth="200.0" styleClass="metro-base-color" visible="false" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
          <children>
             <VBox fx:id="vbox_main" layoutX="14.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="415.0" prefWidth="496.0">
                <children>
