--- a/src/update2/org/cict/layout/subjects/subject-info.fxml
+++ b/src/update2/org/cict/layout/subjects/subject-info.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -14,20 +15,20 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="632.0" prefWidth="1141.0" style="-fx-background-color: #E85764;" styleClass="metro-base-color" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="632.0" prefWidth="1141.0" styleClass="metro-base-color" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="54.0" prefWidth="848.0">
          <children>
             <HBox alignment="CENTER_LEFT">
                <children>
-                  <Label contentDisplay="CENTER" prefHeight="43.0" prefWidth="733.0" text="Subject Information" textFill="WHITE">
+                  <Label contentDisplay="CENTER" prefHeight="43.0" prefWidth="733.0" styleClass="metro-title-1" text="Subject Information" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="29.0" />
                      </font>
                   </Label>
-                  <VBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="601.0" HBox.hgrow="ALWAYS">
+                  <VBox alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" prefHeight="38.0" prefWidth="601.0" HBox.hgrow="ALWAYS">
                      <HBox.margin>
-                        <Insets bottom="5.0" right="20.0" top="5.0" />
+                        <Insets />
                      </HBox.margin>
                   </VBox>
                   <HBox alignment="CENTER_RIGHT" prefHeight="48.0" prefWidth="503.0" spacing="20.0">
@@ -58,17 +59,17 @@
                         </JFXButton>
                      </children>
                      <HBox.margin>
-                        <Insets right="20.0" />
+                        <Insets />
                      </HBox.margin>
                   </HBox>
                </children>
                <padding>
-                  <Insets left="20.0" />
+                  <Insets left="20.0" right="30.0" />
                </padding>
             </HBox>
          </children>
          <VBox.margin>
-            <Insets left="10.0" top="10.0" />
+            <Insets top="10.0" />
          </VBox.margin>
       </VBox>
       <VBox alignment="TOP_CENTER" prefHeight="130.0" prefWidth="1141.0" VBox.vgrow="ALWAYS">
@@ -230,7 +231,7 @@
             <Insets left="10.0" right="10.0" />
          </padding>
       </VBox>
-      <VBox fx:id="vbox_curriculums" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="392.0" prefWidth="1101.0" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css">
+      <VBox fx:id="vbox_curriculums" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="392.0" prefWidth="1101.0" styleClass="metro-table">
          <VBox.margin>
             <Insets bottom="10.0" left="20.0" right="20.0" />
          </VBox.margin>
@@ -254,4 +255,8 @@
          </children>
       </VBox>
    </children>
+   <stylesheets>
+      <URL value="@../metro-ui-table.css" />
+      <URL value="@../metro-ui.css" />
+   </stylesheets>
 </VBox>
