--- a/src/update2/org/cict/layout/subjects/subject-prereq-row.fxml
+++ b/src/update2/org/cict/layout/subjects/subject-prereq-row.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="70.0" prefHeight="70.0" prefWidth="814.0" spacing="10.0" style="-fx-background-color: #E85764;" styleClass="metro-row" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="70.0" prefHeight="70.0" prefWidth="814.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView accessibleText="img" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -77,7 +79,7 @@
       </VBox>
       <HBox alignment="CENTER_LEFT" spacing="10.0">
          <children>
-            <Button accessibleText="btn_remove" mnemonicParsing="false" style="-fx-background-color: #E85764; -fx-border-color: #fff;" textFill="WHITE">
+            <Button accessibleText="btn_remove" mnemonicParsing="false" style="-fx-background-color: #656D79; -fx-border-color: #fff;" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
@@ -95,4 +97,12 @@
    <padding>
       <Insets left="20.0" right="20.0" />
    </padding>
+   <stylesheets>
+      <URL value="@../metro-ui-table.css" />
+      <URL value="@../metro-ui.css" />
+   </stylesheets>
+   <styleClass>
+      <String fx:value="metro-row" />
+      <String fx:value="metro-base-color" />
+   </styleClass>
 </HBox>
